--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -95,3 +95,6 @@ jobs:
 
       run: |
         go test -v -cover ./...
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
